# Animated-Loading-Screens

./: .gitignore  Build-Output.ps1  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
cmake/: CopyRuntimeDlls.cmake  FindFFmpeg.cmake
docs/: BUILDING.md  CONFIGURATION.md
resources/: AnimatedLoadingScreens.ini  default_playlist.txt  put_your_videos_here.txt
src/: CommonLibCompat.h  Plugin.cpp
src/Config/: Config.cpp  Config.h
src/Controller/: AnimatedLoadingScreenController.cpp  AnimatedLoadingScreenController.h
src/Decode/: FFmpegVideoDecoder.cpp  FFmpegVideoDecoder.h  IVideoDecoder.h
src/Logging/: Log.cpp  Log.h
src/Media/: MediaLibrary.cpp  MediaLibrary.h  MediaSelector.cpp  MediaSelector.h  Playlist.cpp  Playlist.h
src/Render/: AspectRatio.cpp  AspectRatio.h  D3D11Hooks.cpp  D3D11Hooks.h  D3D11OverlayRenderer.cpp  D3D11OverlayRenderer.h  SkyrimSwapChain.cpp  SkyrimSwapChain.h
src/Runtime/: LoadingMenuWatcher.cpp  LoadingMenuWatcher.h
src/Utils/: Math.cpp  Math.h  Paths.cpp  Paths.h
tests/: AspectRatioTests.cpp  ConfigTests.cpp  ControllerTests.cpp  FadeMathTests.cpp  MediaLibraryTests.cpp  PlaylistTests.cpp  SelectionTests.cpp  TestFramework.h  TestMain.cpp
vcpkg-triplets/: x64-windows-v143.cmake
